codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_command_local.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: popup
---
› /worktree  start or continue a conversation in a new worktree
────────────────────────────────────────────────────────────────────────────────
❯ /work
────────────────────────────────────────────────────────────────────────────────
  GPT-5.6-Sol default · /tmp/project
