codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_command_remote.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 3091
expression: popup
---
────────────────────────────────────────────────────────────────────────────────
❯ /work
────────────────────────────────────────────────────────────────────────────────
  GPT-5.6-Sol default · /tmp/project
