codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_new_choices.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Where should the new conversation run?

❯ 1. Current checkout  Keep using the current working directory
  2. New worktree      Create an isolated managed checkout

  Press enter to confirm or esc to go back
